- made app.ico looking good in Win2k - added NSIS Script

--- a/Renamer .NET/WizardForm.resx
+++ b/Renamer .NET/WizardForm.resx
@@ -574,7 +574,7 @@
     <value>Top, Bottom, Left, Right</value>
   </data>
   <metadata name="tsFileList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>537, 0</value>
+    <value>545, 0</value>
   </metadata>
   <data name="tsFileList.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Right</value>
@@ -611,18 +611,18 @@
   <data name="tsAddFolders.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlNJREFUOE/dU+9L
-        E2Ec90XvfVcN+gMCM7JtJ/Si3gS9CXqRVJCFWvZjMwgjgwpKSLdybbm2gpAkEItmi+UwnIL5IrKiGrq2
-        a1NzzoYbuZu37e52d7tPz225aW9838Pz4ft87/j8+D7HVVX9Hyvk1fqj7xrFxcnT63BKjIzsm5t9tXvr
-        3Ett9QaMaasnJg5sKU9PeyhBUQoAFLJVlM4Sn8TSe0M+9uGisIb4l2t8bKo9Snv2HqsIvNanFZmHsGRF
-        br4XuYV+cNEhKBJDtLJQ5AzBaqmXUihIQp52U4GyQPiFji2Iq4TsQHb2IdjvnVj5ZEDycxuYmS4w07fB
-        +K8j9a2DoJ0kSyDs1mUqAi69KHHLYAIOpL6akZi8Ai7xkbiyf93Vmi4nUMejXTq+IjBYLxbnLwgEHCDn
-        ikSZoyHEHeBjXeB+diAXuYAs3Qg5GwI9oF0n0E/lFZmDzE5BYkYh/h5CfrmPEHvALdwEN9sG79uTuPr4
-        BM5Zj6D53iHYLXukyiU+oYSCyEJcGUY+MUBcneAXieu86toK93ADOl3N8Aac8Md9sI0ZcNxWC8qosRRF
-        aLuWV0SGkJ9B+NULPtpJyO3Ihc8gG2pAy92D8Mw8gCdoJ58XsIy3wjZ+HnrjttIYPyx1cSEdTrOR54Vs
-        5Cky4UfI0FZkQt1gA7dw+EYdRgJ9RfLaejPtRL1Rg1KC7prLtHnXYNBUkwyaa/l/sf/SDvT4WmDyNRX5
-        ptGmjQk2+yEpg+bOUctO3PedheqsVrUv38FmAup7yrDdrDdqWDW2WtVeff4HPhoDxseneicAAAAASUVO
-        RK5CYII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlZJREFUOE/dU99L
+        U1Ec96F336RBf0BU9mObV3qpl6CXoIekAg3UsmQzCCMfKqhButXWlrYVhBiBKKRZphhOwYLAflCJTu91
+        U3Nqw0l659127929d/fTOdfctBffO5wP3/M9h8/n8/2ewyko+D/GVL9lLDpSriy8v7AFFUpk4OjszKuD
+        RbMvLYXbMGQpHBk5vivXPfuGkXU9C0Ank2JjrUorWPpoyyyO1sqbiH1rkBZG66Ncr/lsXuB1SULXJMhL
+        XqTnmpGefw4x2g1d5YlWCrqWJFjfyNU1aIqU4XqYUE4g3GkRsso6IfuRmnkMYdKB1S82rHytAz/RCH78
+        Lvixm1j70UBQTyqLI9xjTeYFukoUVVwGH/Jj7bsL8Q/XIcY/E1fhrzuNiVwFtD22yyLlBTpKFaP/rEwg
+        AlraIGoiBznmh7TYCPFnA9KRWqS4CmgpFmy7eYtAG5PRNRGa8AkqPwjldzcyy62E6IY4fxviTB3635Xj
+        xtPzuOw9jaoHJ9HiOaTmL/EZI2cVAcpqHzLxduIagLRAXOeoaw16+srg6KpCfyiAsVgQviEbzvmKwdhN
+        HkOEbTZLusIT8gvIv5ohRR2EXI90+CJSbBmq759A78Qj9E61kOcFPMM18A1fgdVetNHGtPtwTEpMJ9bD
+        ndlUpA3J8BMkOS+SbBOE0B2cunUEA6FWg7w53o4HUGo3wRDgmvZf41wHOiad+1YmXcXSvzh2dQ/cwWo4
+        g5UG3zlYub2CnT4kYzPdO+PZi4fBS6DONNI8dwc7CdBzxrbbZbWbBFo2jTSn+38Az4sDjkJN9ooAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="tsAddFolders.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
@@ -715,19 +715,19 @@
   <data name="tsRenameFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAApFJREFUOE91U0tL
-        alEU9vYDnPsT/BWBGOhMEyLoTkqFAq2GZUTRAyR00kAUNRKvFpZFgkZPe/go9Rg9FEVz4INDgo4cCZ51
-        19qQUeSBw2avvde3vu9be/0RDfjS6bS22+3+BQARrv9kMpl70N1+/PX1Vfrw8CDGpKFkMtlsNBpQr9fh
-        8PCwubKyMhSJRMRHR0fSX4Genp6c0Wi0l0ql+NvbW8nd3R1fqVTg/f0djo+P+WAwKEEgfm9vr+fxeJzf
-        QDB5qVwuQ6vVglKpBJjcsdvtQj6fh7e3N9ja2hIwuYOygOd5OD09pdhSH+Tx8XF5Z2dHIBBKKBaLDOgT
-        gPYvLy9AACgRFhcXhfn5+eVvLOLx+CYlZzIZQEA4Pz8Hl8sFSJcYQSKRAJTGqpvN5s1+MiJy9/f3tYuL
-        i3ahUACO4+Dy8hLW1tYSCwsLcjRPbrFYEniHAdE57tsbGxs1vMOJyLiPjw9Glypns1nw+Xywvr4u/6zi
-        cDjk6AHEYjHGjNiQuSMjIz0GUK1WmUY6oAonJyewvb3dB7DZbPL9/X3GgCTc3Nyw+8PDwz3R7u4uZ7Va
-        a263u43dYCDkA5qaoMoERBJIP0k7OzuDycnJ9tjYWE2j0XB9L5DiJhrJjKIVHxIEAgHAvrPY9fU1hMNh
-        FpuZmfkykRAODg6WV1dXhVwux5KpXc/Pz8wTAiJGFL+6umJns7Ozgl6v/2qj1+tdInr08vx+P6DzHfwF
-        Mo10G41GYXp6ukNnpB2Lwejo6NdDIhYYdCqVyp5Op+NNJpMEu8BTNWIwNTXFT0xMSMbHx3kyTqFQfH/K
-        n0bMzc1JsZqYBgf/JlEOhUKAyWyYcBWrVKrfh+nnhBkMBi1WjKrV6ijS1Q4a5f8r9h5p6+ZHuQAAAABJ
-        RU5ErkJggg==
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAo9JREFUOE91U01L
+        amEQ9vYD3PsT/BVCnIVLNYjAuykLFEpbWiGGGqTUpkUSpRReKyyTBAvz28qvOkmlUfSxSOOgoCtXgmfu
+        zAsaRQnycuadeeZ5nnnnj+SX39XVla7b7f4FAAme/4aHhz2/5Q7i9/f38kKhIMWioXw+3/z4+IB6vQ6H
+        h4dNq9U6dHJyIj06OpL/CFQulzdTqVSvVCoJmUxGls1mhbe3N3h9fYVQKCQEg0EZAgl7e3u9nZ2dzS8g
+        WLzw8vICrVYLnp+fAYs7brdbfHh4gEqlAk6nU8TiDsoCQRDg9PQUXC7XwgCkWCxaPB6PSCBU8PT0xID6
+        APR9d3cHBIASYW5uTpydnbV8YXF5eblExdfX14CAcHZ2BltbW4B0iRHkcjlAaaz78vLy0qAYEfnz8/Na
+        LBZrPz4+As/zEI/HwWaz5cxmM4fmcSsrKznMYUB0j99th8NRwxxeQsY1Gg1Glzrf3NyA3+8Hu93O9bts
+        bGxw6AFcXFwwZsSGzOU4rscA3t/fmUa6oA7Hx8ewtrY2AFhfX+f29/cZA5KQTqdZvkKh6Em2t7f51dXV
+        GprYxmkwEPLB6/XmqDMBkQTST9Ki0SiMj4+3R0dHayMjI/zAC6S4hEYyo+jEhwSBQABw7iyWTCYhEomw
+        mMFg+DSREA4ODixollitVlkxjev29pZ5QkDEiOKJRILdGY1GcWpq6nOMPp9vgejRy9vd3QUE6xAgmUa6
+        Z2ZmRL1e36E70r64uAgajebzIRELDG4qlcre5OSkMD8/L8MpCNSNGExMTAharVY2NjYmkHGY9/Up940w
+        mUxy7CalxcF/kyiHw2HAYrZMeEpVKtXPy/R9w6anp3XYMaVWq1NIV/fbKv8HA/EeV8f2EAsAAAAASUVO
+        RK5CYII=
 </value>
   </data>
   <data name="tsRenameFiles.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
@@ -1287,17 +1287,17 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAoVJREFUOE+Fks1P
-        02Acx8v/4dmDOI0hYDyZePHiRYMxxoPBl4NGgyFqAjEgBMaLBIKbQMSAhDnfABFQhAQHTnAwdSAD5qaD
-        AWMbY2xtt7br2n59WnXROPBJP6ff8/38vm2aRWU4Xe+2SiVkXaSg7FIUheKSEpVMyZQkK7+QKVkCQbFn
-        ylMd4+FwnE/hf1x/aBMyCtotm1r40fwDdM61wmC/g9rJClRaS3F7vAS33t7U5oVtTmQUtI2GtQs7HXV+
-        uWU2s6B1JKQJzNbQtqjzC4bPoBYGc2Z8/cfElT8wDgXSArVF94fgP2XCNI+zjXZQtq48QVFkckEhj4qM
-        xkE/GE7Es8kQulWIQKVvKoQ+WxCvPgbhDTA4XWcD5XyRG1MkHsJaAxLeJiSWO1D/chU0EfRObWibMzXw
-        +Gmc1E+CcpsPMLJIk7AR8W8GMPPlaHk6hrXxJriNudviWokhX/+eCJ7niikuiI2JUqz2noHvyXEs9RSA
-        5yLgEhGw0QC2Nv2IhH8SZQVNqgoO11lk0uCgqL2/LBA4QEpg1uPFxHQPxibMGLWa8Hq0HQMjLeh/cxdD
-        dp8mOFFpxZEbw32U25iXVCQOEmNDKjoMcbObfI96CKt14H0V4JeKwX2/ioS7APHFU2RPQBOkfyDb/TxB
-        FhmIkQEkQyYI6/fAr1SRcDn45RISLiThc2AX8sHMHYWcDP4tcDTu5xUxSsKdEPxNWpDzFpHQebIxHywJ
-        MTOHQH/ah5h9N1LMNNRMusHXWt06F3PGLJbHctzTDtbdDNbVAHZRD8ZZRrYWg/5SBHrmCmjHJZiayxRn
-        Q04sLXDps6+5avaandV7Nhw1On5HqnX8bI2OdlVlG34LfgCGAs+PPevwdgAAAABJRU5ErkJggg==
+        02Acx8v/4dmDOI0hYDyZePHiRTNjjAeDLweNBkPUBGJACIwXCQQ3hIgBCTjfABFQhAQHTnAwdSAD5qaD
+        AWMbY2xtt7br2n59WnXROPBJP6ff8/38vm2aRWU4ne+2SiRkXaSg7FIUheKSEpVMyZQkK7+QKVkCQbFn
+        ylPt4+FwnE/hf1x/aBMyCtosm1r40fwDdMy1wGi/g5rJclRYS3B7vBi33t7U5gWtTmQUtI6GtQs7HXV+
+        uXk2s6BlJKQJzNbQtqjzC8bPoBYGc2Z8/cfElT8wDQXSArVF94fgP2XCNI+zDXZQts48QVFkckEhj4qM
+        hkE/GE7Es8kQulWIQKVvKoQ+WxCvPgbhDTA4XWsD5XyRG1MkHsJaPRLeRiSW21H3chU0EfRObWibMzXw
+        +GmcNEyCcpsPMLJIk7AJ8W9GMPNlaH46hrXxRrhNudviWolBb3hPBM9zxRQXxMZECVZ7z8D35DiWevLB
+        cxFwiQjYaABbm35Ewj+JsoImVQWHay0yaXBQ1N5fFggcICUw6/FiYroHYxNmjFq78Hq0DQMjzeh/cxdD
+        dp8mOFFhxZEbw32U25SXVCQOEmNDKjoMcbObfI86CKu14H3l4JeKwH2/ioQ7H/HFU2RPQBOkfyDb/TxB
+        FhmIkQEkQ10Q1pvAr1SScBn45WISLiDhc2AX9GDmjkJOBv8WOBr284oYJeEOCP5GLch5C0noPNmoB0tC
+        zMwh0J/2IWbfjRQzDTWTbvC1RrfOxZwxi+WxHPe0gXXfA+uqB7toAOMsJVuLQH8pBD1zBbTjEjqbShVn
+        fU4sLXAZsq+5qveanVV7NhzVOn5HqnT8bLWOdlVmG38LfgCFYc+NnA++pQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsLoadRulesetDialog.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
@@ -2417,18 +2417,18 @@
   <data name="tsStepRename.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAopJREFUOE91U01L
-        cmEQ9e0HuPcn+CuCcNGyDCLw3WgFBpot+0CSUhCpFi2EMMXwTSO/UEhJLcuPq1a3KFOKyoUaF4VcuRJ0
-        3pkHNIwU5OHO88yZc87M/BGN+N3e3s53Op2/ACDC89/ExIR91NtBvFgsSvP5vBiTxnK5XPPz8xPq9Tr4
-        fL7m5ubmWCQSEQcCAemvQA8PD7ZkMtm9ubkRrq+vJalUSqhUKvDx8QHBYFDw+/0SBBI8Hk/36OjINgSC
-        yRvv7+/w9fUFb29vgMlts9ncK5fL8Pz8DFi9h8ltlAWCIEA0GgWLxbIxACkUCvq9vb0egVDC6+srA+oD
-        0PfT0xMQAEqEtbW13srKin6IRTabNVHy3d0dICDEYjE4PDwEpEuMgOM4QGmsOrIzDZIRkU+n07V4PN56
-        eXkBnuchkUjA1tYWt7q6KkP6sp2dHQ7fMCC6x++W0Wis4RteRMY1Gg1Glyrf39/D8fExbG9vy/pVDg4O
-        ZOgBZDIZxozYkLnj4+NdBlCtVplGuqAKoVAI9vf3BwBWq1V2cnLCGJCEq6sr9p4BOJ1Ofnd3t2a321vY
-        DQZCPjgcDo4qExBJIP0k7fz8HJRKZWt2drY2MzPDD7xAiiY0khlFJw4SnJ6eAvadxS4vL+Hs7IzFlpaW
-        vk0kBK/Xq6del0ollkztenx8ZJ4QEDGi+MXFBbtbXl7uLS4ufrfR5XJtED2aPLfbTYPTJkAyjXRrtdqe
-        Wq1u0x1pNxgMIJfLvweJWGDQRqYsLCwI6+vrEuyCQNWIgUqlEhQKhWRubk6gN5OTk8Oj3DdCp9NJsZqY
-        Fgf/TaIcDocBk9ky4Smempr6fZl+bphGo5nHisnp6ekk0p0ftcr/AVw0HbWHu/DVAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAolJREFUOE91U01L
+        cmEQ9e0HuPcn+CuCcNGyDCLw3WgFBpot+0CSUpSoTQshTDF808gvFFJSy/LjqtUtypSicqHGRSFXrgSd
+        d+YBDSMFebjzPHPmnDMzf0Qjfre3t/OdTucvAIjw/DcxMWEf9XYQLxaL0nw+L8aksVwu1/z8/IR6vQ4+
+        n6+5ubk5FolExIFAQPor0MPDgy2ZTHZvbm6E6+trSSqVEiqVCnx8fEAwGBT8fr8EgQSPx9M9OjqyDYFg
+        8sb7+zt8fX3B29sbYHLbbDb3yuUyPD8/A1bvYXIbZYEgCBCNRmFnZ2djAFIoFPR7e3s9AqGE19dXBtQH
+        oO+npycgAJQIa2trvZWVFf0Qi2w2a6Lku7s7QECIxWJweHgISJcYAcdxgNJYdYvFYhokIyKfTqdr8Xi8
+        9fLyAjzPQyKRgK2tLW51dVWG9GW7u7scvmFAdI/fLaPRWMM3vIiMazQajC5Vvr+/h+PjY9je3pb1qxwc
+        HMjQA8hkMowZsSFzx8fHuwygWq0yjXRBFUKhEOzv7w8ArFar7OTkhDEgCVdXV+w9A3A6nTwaWLPb7S3s
+        BgMhHxwOB0eVCYgkkH6Sdn5+DkqlsjU7O1ubmZnhB14gRRMayYyiEwcJTk9PAfvOYpeXl3B2dsZiS0tL
+        3yYSgtfr1VOvS6USS6Z2PT4+Mk8IiBhR/OLigt0tLy/3FhcXv9vocrk2iB5NntvtpsFpEyCZRrq1Wm1P
+        rVa36Y60GwwGkMvl34NELDBoI1MWFhaE9fV1CXZBoGrEQKVSCQqFQjI3NyfQm8nJyeFR7huh0+mkWE1M
+        i4P/JlEOh8OAyWyZ8BRPTU39vkw/N0yj0cxjxeT09HQS6c6PWuX/SZUdr57utKsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsStepRename.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
@@ -2511,26 +2511,30 @@
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A6Ojo/+jo6P/o6Oj/6Ojo/+jo6P/o6Oj/6Ojo/+jo6P9iYmL/lZWV/25u
-        bv/o6Oj/6Ojo/+jo6P/o6Oj/6Ojo/8nJyf/8/Pz//Pz8//z8/P/8/Pz//Pz8//z8/P/8/Pz//Pz8/2Ji
-        Yv/8/Pz//Pz8//z8/P/8/Pz//Pz8/+jo6P/Jycn//Pz8/8OPbP/DkW3/w5Fu/8KSb//Ck3D/wZNx//z8
-        /P9iYmL//Pz8//z8/P/8/Pz//Pz8//z8/P/o6Oj/ycnJ//z8/P/Dj2v/2Ztz/9abc//WnXb/1qF7/8KT
-        cP/8/Pz/YmJi//z8/P/8/Pz//Pz8//z8/P/8/Pz/6Ojo/8nJyf/8/Pz/w49r/9mYcv/YmXL/1pt0/9ef
-        ef/Ckm///Pz8/2JiYv/8/Pz//Pz8//z8/P/8/Pz//Pz8/+jo6P/Jycn//Pz8/8OPa//EkGz/w49s/8OQ
-        bf/DkW3/w5Fu//z8/P9iYmL//Pz8//z8/P/8/Pz//Pz8//z8/P/o6Oj/ycnJ//z8/P/8/Pz//Pz8//z8
-        /P/8/Pz//Pz8//z8/P/8/Pz/bGxs//z8/P/8/Pz//Pz8//z8/P/8/Pz/6Ojo/8nJyf/Jycn/ycnJ/8nJ
-        yf/Jycn/ycnJ/8nJyf/Jycn/a2tr/46Ojv91dXX/ycnJ/8nJyf/Jycn/ycnJ/8nJyf////8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
-        /wD///8A//8AAP//AAD//wAA//8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//8AAP//
-        AAD//wAA//8AAA==
+        AAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABiYmIAa2trAGxsbABubm4AdXV1AMOPawDDj2wAxJBsAMOQbQDDkW0Aw5FuAI6OjgDCkm8AwpNwAMGT
+        cQDZmHIAlZWVANiZcgDWm3MA1pt0ANmbcwDWnXYA1595ANahewDJyckA6OjoAPz8/AAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsb
+        GxsbGxsbGxsbGxkZGRkZGRkZABADGRkZGRkYGhoaGhoaGhoAGhoaGhoZGBoGCQoMDQ4aABoaGhoaGRga
+        BRQSFRcNGgAaGhoaGhkYGgUPERMWDBoAGhoaGhoZGBoFBwYICQoaABoaGhoaGRgaGhoaGhoaGgIaGhoa
+        GhkYGBgYGBgYGAELBBgYGBgYGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsbGxsb
+        GxsbGxsbGxsbGxsbGxsbGxsbGxsbG///AAD//wAA//8AAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP//AAD//wAA//8AAP//AAA=
 </value>
   </data>
   <data name="$this.Text" xml:space="preserve">
