--- a/Renamer .NET/WizardForm.resx
+++ b/Renamer .NET/WizardForm.resx
@@ -611,18 +611,18 @@
   <data name="tsAddFolders.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlNJREFUOE/dU81P
-        02Ac5uAdT8Yl/gF+IZlI8aQXEy8mHkQw0QOgqNkwIRg5qIkuERgyN8FNjSEaE4IJIAYhGAbJ4gk/ojCo
-        UMeHDHBhU9bRdW3Xdn18304GeOHumz759dfm+fi9b968vP9jTQ0UjYeHzqqL/vJNKFNnBo/Ozb4+tGuu
-        qyh/C4aL8gOB4zty0we7GMUwMgAM8lBk3zU5huWALb00WqWsI/KlVg6P1oW5vsNlOQH2TXHC0GUoy26k
-        5luRWngBKdwDQ+OJlghDTxKsZXstDklcS3O9DJsTCHVahYy6RsheiLOPIHxzYPWTDbHPNeAnG8BP3AU/
-        fhPxsXqCOpIsilDvkeSGQHexqkkr4Fkv4l+diL6/Din6kbgKf91pTeQS0PGC3YXypgQlqjl/RiGQAD1l
-        EnWJgxLxQl5qgPSjHqmZqxC5C9DFaQQ7Ngs8ZdKGLkEXPkDjh6D+7kF6pZ0QWyAt3IY0W4OBd+dx48k5
-        XHafRuX9k2hz7dM2TuEZo2RUAepqP9LRDuLqg7xIXOepazV6+0vh6K7EAOvDeMQPz7AN5Z4CMHaLyxQJ
-        egplQ+UJ+SWUn62Qww5CrkMqdBHidCmqmk+gb/Ih+qbayPECrpFqeEauoNC+M7sP35sLIlKCTfxiX2XE
-        medIhh4jybmRnG6EwN7BqVtWDLLtJnl9vZ3wocRugSnANR6o5ZwHO9mm/bExZ4H8L45d24MWfxWa/BUm
-        v2moYmuC7S4kY7PcO+Paiwf+S6DOtNI+twfbCdD/jG2302q3CDQ2rbSn3/8AxdICjeIYLpAAAAAASUVO
-        RK5CYII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlFJREFUOE/dU89P
+        02AY5uCdm3GJfwBRkcxJ8aQXEy8mHkQ00QNDUbNhNBg5qIkuETZkMsFNEkM0JgSjIAYhKIOEeMIfURpW
+        oW4DGeDCFqGj7dqu7fr4tcgAL9z90idv3zbPj/f78hUV/R9ratBBJ95XqvPDVZtwSo0NHZqJv96/c+aV
+        o3gLRhzFY2NHdhSmp19SimHkARjkMbH2rslpLI65cgvjTmUdya9X5cR4fYLtP1BVEGDelGcMXYay2Irs
+        bBuyc88gJXphaBzREmHoAsHqWq+tICtkcmwfxRQEot12Pq+uEnIQYvwR+O8eLH92If2lDlykEdzkXXD0
+        TaxMNBDUk2QpRPsOChsCPeWqJi2BY4JY+eZD6sN1SKlPxJX/627WTCGBOR7dUyZvSlChWvPnFQIJ0LMW
+        UZdYKMkg5IVGSD8bkI1dhsiegy5Og+7aLNBB5Qxdgs5/hMYNQ/3di9xSJyG2QJq7DSleh8F3Z3Gj4wwu
+        tp6A8/4xtPtLtI1TeEIpeZWHujyAXKqLuIYgzxPXWdO1Fn0DlfD0ODHIhEAnwwiMuHA6UArKbfNbInSg
+        TDZUjpCfQ/nVBjnhIeR6ZKPnIU5Xoqb5KPojD9E/1U6OF/CP1iIwegll7uK1ffjRXJqUMkwmHXmRF2NP
+        IUQfQ2BbIUw3gWfu4PgtO4aYTou8vt5OhlDhtsESYJv2XmN9+7oZ7570hK9U/heHr+xGS7gG3nC1xfcO
+        V29NsN2FpFy2eyf9JXgQvgDT2axmX9iD7QTM/5Rrl8/utvFmbLOavfn9D37dAnBgRP0wAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="tsAddFolders.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
@@ -715,18 +715,18 @@
   <data name="tsRenameFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAo1JREFUOE91U01L
-        alEU7fUDnPsT+hWCOHDoB4TQm6QJBmkN1ZDCEiR0YAMjylB6VmQqBhaaZan5lbfILJK0QRoXAx05Crz7
-        7X0go6gLl8PZ5+y111r77D8jv3xXV1e69/f3vwAwgus/qVTq++3uMH53dzdWLBZFmDRaKBTeXl9fod1u
-        w8HBwdvCwsLo0dGRKBKJjP0IdHNzs5FOpwflcpm/uLgQZzIZ/vn5GZrNJkSjUT4cDosRiN/d3R0EAoGN
-        LyCYPN9oNKDb7cLT0xNgct/j8QgPDw9Qq9VgaWlJwOQ+ygKe5+H4+BhWVlbmhyClUsm2trYmEAgl1Ot1
-        BvQBQPtqtQoEgBLBYrEIc3Nzti8sLi8vHZRcqVQAASGZTMLm5iYgXWIE+XweUBqr7nQ6HcNkROSy2Wzr
-        5OSk9/j4CBzHQSqVArvdnjebzTI0T+ZyufJ4hwHROe57y8vLLbzDjZBxnU6H0aXK19fXEAwGSbfso8r6
-        +roMPYBcLseYERsyVyKRDBjAy8sL00gHVCEWi8Hq6uoQwOv1yvb29hgDknB+fs7uMwC/38+53e6Wz+fr
-        YTcYCPmwtbWVp8oERBJIP0lLJBIwOTnZGx8fb6nVam7oBVJ0oJHMKFrxIcH+/j5g31ns7OwM4vE4i01P
-        T3+aSAihUMiGZgn39/csmdp1e3vLPCEgYkTx09NTdmYymQS9Xv/Zxu3t7XmiRy9vZ2cHEKxPgGQa6TYa
-        jYLBYOjTGWlfXFwElUr1+ZCIBQY3cGAGU1NTvNVqFWMXeKpGDLRaLT8xMSHWaDQ8GSeXy78+5Q8jZmdn
-        x7CaiAYH/zeifHh4CJjMhglXkUKh+HmYvk/YzMyMDiumlUplGunqfhvl/zALHgByFEZiAAAAAElFTkSu
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAo1JREFUOE91k01L
+        qlEQx7t9APd+hD6FJC5cmkEE3o1mUFDqMhNRSkFEIVoEUkrhNSNLMTDpxUzL13wSK0XpZaHFQ0KuXAk+
+        c2cOZBglyOGZc+Y3//mfM39Gfvnd3NzM9Hq9vwAwgus/qVTq/e3sIH5/fz+Wz+dFmDSay+Xab29v8Pr6
+        CgcHB22LxTJ6fHwsCofDYz+CyuXyZjKZ7BeLRT6VSonT6TT/8vICz8/PEIlE+MPDQzGC+GAw2N/Z2dkc
+        gmCy6enpCT4+PuDx8REwubu2tibUajV4eHiAlZUVAZO72BbwPA/xeBycTqdpACkUCuaNjQ2BIJTQaDQY
+        6BNA33d3d0AAbBGMRqNgMBjMQyoymYydkkulEiAQTk9PYWtrC1AuKYJsNgvYGqvucDjsg2QkcldXV62z
+        s7NOvV4HjuPg/PycZGeXlpZkaJ7M5XJl8QwD0T5+d2w2WwvPcCNk3Pv7O5NLlW9vbyEQCMDq6qrss4rH
+        45GhB3B9fc2UkRoyVyKR9Bmg2WyyHmmDKkSjUVhfXx8A0B/Z3t4eU0AtXF5esvMMsL29zbnd7pbX6+3g
+        bTAI+eDz+bJUmUDUAvVPrZ2cnIBare5MTU21JicnuYEXKNGORjKjaMWHBPv7+4D3zmIXFxcQi8VYbH5+
+        /stEIoRCITOaJVSrVZZM11WpVJgnBCJFFE8kEmxPp9MJs7OzX9fo9/tNJI9e3u7uLiCsS0AyjfpeXFwU
+        5ubmurRHvVutVlAqlV8PiVRgcHN8fLyv1Wr55eVlMd4CT9VIgUaj4VUqlXh6epon4+Ry+fBT/jRCr9eP
+        YTURDQ7+2yT56OgIMJkNE64ihULx8zB9n7CFhYUZrJicmJhIotyZ30b5PxHYHfRevDmZAAAAAElFTkSu
         QmCC
 </value>
   </data>
@@ -1314,17 +1314,17 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAoVJREFUOE+Fks1P
-        02Acx8v/4dmDOI0hYDyZePHiRTNjjAeDLweNBkPUBGJACIwXCQtuChEdEnC+ASKgCAkOnOBgKiAD5tDB
-        gLGNMba2W9t1bb8+rbpoHPikn9Pv+X5+3zbNojKctnebJRKyzlNQdiiKQnFJiUqmZEqSlV/IlCyBoDgz
-        5amWkXA4zqfwP64+dAgZBRbbhhZ+NHsfrTNNMDlvoWasHBX2EtwcKcaNt9e1eUGzCxkFzUNh7cJ2R51f
-        bJzOLGgaDGkCqz20Jer8nOkzqLm+nClfzxFx+Q/M/YG0QG3R8SH4T5kwzeO00QnK0ZYnKIpMLijkUZFh
-        7POD4UQ8GwuhQ4UIVLrHQ+h2BPHqYxDeAIOTtQ5Qrhe5MUXiIazWI+FtQGKpBXUvV0ATQdf4urY5U4MF
-        P43jhjFQHus+RhZpEjYj/s0EZrYMjU+HsTrSAI85d0vcyzHoDe+J4HmumOKCWB8twUrXKfieHMViZz54
-        LgIuEQEbDWBzw49I+CdRVtCkquBgrU0mDfaL2vvLAoEDpASmF7wYnejE8KgVQ/Z2vB6yoHewET1vbqPf
-        6dMExyrsOHRtoJvymPOSisRBYhxIRQcgbnSQ71EHYaUWvK8c/GIRuO+XkfDkIz5/guwJaIL0D+S4lyfI
-        IgMx0otkqB3C2h3wy5UkXAZ+qZiEC0j4DNg5PZiZw5CTwb8Fk8a9vCJGSbgVgr9BC3LeQhI6SzbqwZIQ
-        M3UA9Kc9iDl3IsVMQM2kG3yt0a1xMVfMZnssxxcsYD13wbrrwc4bwLhKydYi0F8KQU9dAj15AQ+MpYqr
-        PieWFrgN2Vfc1butrqpd65PVOn5bqnT8dLWOdldmm34LfgCBm8+BvbPnRgAAAABJRU5ErkJggg==
+        02Acx8v/4dmDOI0hYDyZePHiRYMxxoPBl4NGgyFqAjFDCIwXyQhuChECEnC+ASKgCAkOnOBgKiAD5tDB
+        gLGNbWxtt7br2n59WnXROPBJP6ff8/38vm2aRWU4He+29BKyLlJQdimKQnFJiUqmZEqSlV/IlCyBoDgy
+        5am2sVAozqfwP64/tAsZBa3WsBZ+NN+C9rkmmBx3UDNRjgqbHrfHSnDr7U1tXtjsREZB80hIu7DTUeeX
+        G2czC5qGg5rAYgtuizq/YPoMamEgZ8bbd0xc/QPzoD8tUFt0fQj8UyZE8zhb7wBl78gTFEUmFxTyqMio
+        H/CB4UQ8mwiiS4UIVHong+i1B/DqYwAeP4PTtXZQzhe5MUXiIawbkfA0ILHShrqXa6CJoGdyU9ucqcGS
+        j8ZJwwQot+UAI4s0CZsR/2YCM1+GxqejWB9rgNucuy2u1RjyDe+J4HmumOIC2BzXY63nDLxPjmO5uwA8
+        FwGXiICN+rEV9iES+kmUFTSpKjhca5VJg4Oi9v6yQOAAKYHZJQ/Gp7oxOm7BiK0Tr0da0T/ciL43dzHo
+        8GqCExU2HLkx1Eu5zXlJReIgMXakokMQw13ke9RBWKsF7y0Hv1wM7vtVJNwFiC+eInv8miD9A9kf5Amy
+        yECM9CMZ7ISwcQ/8aiUJl4FfKSHhQhI+B3YhH8zcUcjJwN+C6fr9vCJGSbgdgq9BC3KeIhI6TzbmgyUh
+        ZuYQ6E/7EHPsRoqZgppJN/hao9vgYs6Y1fpYji+1gnXfB+sygl00gHGWkq3FoL8UgZ65Anr6ElqMpYrT
+        mBNLC1yG7Guu6r0WZ9WezelqHb8jVTp+tlpHuyqzTb8FPwCA+s9/mOOYLQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsLoadRulesetDialog.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
@@ -2444,18 +2444,18 @@
   <data name="tsStepRename.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAopJREFUOE91U0tL
-        qmEQ7vQD3PsT+hWCuGhpBRF4NqmBgWlLTaSLiiK1cSFIGYVHi7yhoNLVu6n1JXaRonShxUeBrlwJOmfm
-        hYwiBXn55n3nmed5ZubP2Ijf1dWVotfr/QWAMTz/icVi96i3w/jd3d1EsVgUYNL45eXlx9vbG7y+vkIg
-        EPhYXV0dj8fjglAoNPErUKVS2U4mk/1yucyn02lhJpPhG40G1Ot1CIfDfDAYFCIQf3Bw0N/f39/+BoLJ
-        hpeXF2i32/D8/AyY3F1fXx/UajW4v78HrD7A5C7KAp7nIZFIgN1uNwxBSqWS0Wq1DgiEEp6enhjQJwB9
-        397eAgGgRNDr9YPl5WXjNxb5fN5CydfX14CAcHJyAjs7O4B0iREUCgVAaay6zWazDJMRkctms63T09PO
-        4+MjcBwHZ2dnsLGxUdDpdBKkL9nc3CzgGwZE9/jdMZvNLXzDjZFx7+/vjC5Vvrm5Aa/XCyaTSfJZxeVy
-        SdADyOVyjBmxIXNFIlGfATSbTaaRLqhCJBIBh8MxBHA6nZLDw0PGgCSkUin2ngHs7e1xW1tbLbfb3cFu
-        MBDyYXd3t0CVCYgkkH6Sdnx8DPPz853Z2dnWzMwMN/QCKVrQSGYUnThIcHR0BNh3Fru4uIBYLMZii4uL
-        XyYSgt/vN1KvHx4eWDK1q1qtMk8IiBhR/Pz8nN1pNJrBwsLCVxs9Ho+B6NHk+Xw+GpwuAZJppHtpaWmg
-        Uqm6dEfa19bWYHp6+muQiAUGt8kUpVLJr6ysCLELPFUjBnK5nJfJZMK5uTme3kxOTn4f5U8jtFrtBFYT
-        0OLg/4MoR6NRwGS2THgKpFLp78v0c8PUarUCKyanpqaSSFcxapX/A9nMHYsVl+LrAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAopJREFUOE91U01L
+        cmEQ9e0HuPcn+CuCcNGyDCLw3WgFBpot+0CSUpGoTQshTDF808gvFFJSy/LjqtUtypSicqHGRSFXrgSd
+        d+YBDSMFebjzPHPmnDMzf0Qjfre3t/OdTucvAIjw/DcxMWEf9XYQLxaL0nw+L8aksVwu1/z8/IR6vQ4+
+        n6+5ubk5FolExIFAQPor0MPDgy2ZTHZvbm6E6+trSSqVEiqVCnx8fEAwGBT8fr8EgQSPx9M9OjqyDYFg
+        8sb7+zt8fX3B29sbYHLbYDD0yuUyPD8/A1bvYXIbZYEgCBCNRmFnZ2djAFIoFPRms7lHIJTw+vrKgPoA
+        9P309AQEgBJhbW2tt7Kyoh9ikc1mTZR8d3cHCAixWAwODw8B6RIj4DgOUBqrbrFYTINkROTT6XQtHo+3
+        Xl5egOd5SCQSsLW1xa2ursqQvmx3d5fDNwyI7vG7ZTQaa/iGF5FxjUaD0aXK9/f3cHx8DNvb27J+lYOD
+        Axl6AJlMhjEjNmTu+Ph4lwFUq1WmkS6oQigUgv39/QGA1WqVnZycMAYk4erqir1nAE6nk9/b26vZ7fYW
+        doOBkA8Oh4OjygREEkg/STs/PwelUtmanZ2tzczM8AMvkKIJjWRG0YmDBKenp4B9Z7HLy0s4OztjsaWl
+        pW8TCcHr9eqp16VSiSVTux4fH5knBESMKH5xccHulpeXe4uLi99tdLlcG0SPJs/tdtPgtAmQTCPdWq22
+        p1ar23RH2nHIQC6Xfw8SscCgjUxZWFgQ1tfXJdgFgaoRA5VKJSgUCsnc3JxAbyYnJ4dHuW+ETqeTYjUx
+        LQ7+m0Q5HA4DJrNlwlM8NTX1+zL93DCNRjOPFZPT09NJpDs/apX/A8ctHYWRCkSgAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="tsStepRename.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
